fix gallery, product image wrapper, new product lable, general padding and z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,7 @@ header {
 
 .header-right-items form {
     position: relative;
+    z-index: 10;
 }
 .header-right-items input {
     font-size: 0.6rem;
@@ -60,7 +61,9 @@ header {
 }
 
 
+
 /* header - main menu */
+
 
 
 .main-menu-container{
@@ -94,6 +97,7 @@ header {
     top: 150%;
     margin: 0px;
     padding: 0px;
+    z-index: 10;
 }
 
 .main-menu-list li {
@@ -116,6 +120,7 @@ main {
 .main-page-header {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 
 .main-page-header nav ul {
@@ -173,20 +178,44 @@ main {
 /* product gallery */
 
 .product-gallery-wrapper {
-    justify-content: space-around;
-    padding-inline: 30px;
-    padding-bottom: 60px;
+    padding: 0px 50px;
+    display: flex;
+    justify-content: center;
 }
 
 .product-gallery {
-    display: flex;
+    justify-content:left;
+    display: inline-flex;
     flex-wrap: wrap;
-    justify-content:left
+    gap: 20px;
 }
 
-    .product {
-    padding-inline: 10px;
-    padding-block: 20px;
+/* .product-gallery--grid {} */
+
+.product {
+    width: calc(25% - 15px);
+    padding: 10px 0px;
+}
+
+.product-image-wrapper {
+    position: relative;
+}
+
+.product-image-new-lable {
+    text-align: center;
+    font-size: 0.5rem;
+    font-weight: bold;
+    padding: 3px 7px;
+    background-color: white;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 1;
+    bottom: 10px;
+    left: 7px;
+}
+
+.product-image {
+    width: 100%;
 }
 
 .product-name {
